--- a/contact.html
+++ b/contact.html
@@ -1,166 +1,198 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="pt-br">
+
+  <head>
+
     <meta charset="utf-8">
-    <!-- This file has been downloaded from Bootsnipp.com. Enjoy! -->
-    <title>contato</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
-    <style type="css/style2.css"> </style>
-    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-</head>
-<body>
-  <nav class="navbar navbar-down">
-    <div class="container">
-      <div class="flex-container">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-        <ul class="nav navbar-nav flex-item hidden-xs">
-          <li><a href="file:///C:/Users/Dalton/Documents/ForumSite/home.html">Home</a></li>
-          <li><a href="file:///C:/Users/Dalton/Documents/ForumSite/forum.html">Forum</a></li>
-          <li><a href="file:///C:/Users/Dalton/Documents/ForumSite/contact.html">contatos</a></li>
-        </ul>
+    <title>Forum Apoio Tecnico Hece Maquinas</title>
 
-        <ul class="nav navbar-nav flex-item hidden-xs pull-right">
-          <li><a href="#" class=""></a></li>
-        </ul>
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="css/blog-post.css" rel="stylesheet">
+
+  </head>
+
+  <body>
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="#">Hece Maquina</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="file:///C:/Users/Dalton/Documents/prj2018/ForumSite/home.html">Principal</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="file:///C:/Users/Dalton/Documents/prj2018/ForumSite/forum.html">Forum</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="file:///C:/Users/Dalton/Documents/prj2018/ForumSite/usuarios.html">Usuarios</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="file:///C:/Users/Dalton/Documents/prj2018/ForumSite/contact.html">Sobre
+                  <span class="sr-only">(current)</span>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
 
-<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <!-- Page Content -->
+    <div class="container">
+
+      <div class="row">
+
+        <!-- Post Content Column -->
+        <div class="col-lg-8">
+
+          <!-- Title -->
+          <!-- Preview Image -->
+          <img class="img-fluid rounded" src="imagens/logo hece.jpg" alt="">
+
+          <!-- Author -->
+          <p class="lead">
+            by
+            <a href="#">Suporte Tecnico</a>
+          </p>
+
+          <hr>
+
+          <!-- Date/Time -->
+          <p>Postado em 4 abril, 2018 at 12:00 AM</p>
+
+          <hr>
+
+          <hr>
 
 
- <div class="contact-pageheader">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <div class="contact-caption">
-                        <h1 class="contact-title">Não encontrou nada! Fale-nos o que precisa.</h1>
-                        <p class="contact-text">
-                          Deixe seu contato e sua duvida iremos trabalhar para resolvermos!
-                        </p>
-                    </div>
-                </div>
-                <div class="col-lg-offset-1 col-lg-5 col-md-offset-1 col-md-5 col-sm-12 col-xs-12">
-                    <div class="contact-form">
-                        <h3 class="contact-info-title">Contato</h3>
-                        <div class="row">
-                            <form>
-                                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                    <div class="form-group">
-                                        <label class="control-label sr-only " for="Name"></label>
-                                        <input id="name" type="text" placeholder="Name" class="form-control" required>
-                                    </div>
-                                </div>
-                                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                    <div class="form-group">
-                                        <label class="control-label sr-only " for="email"></label>
-                                        <input id="email" type="text" placeholder="Email" class="form-control" required>
-                                    </div>
-                                </div>
-                                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                    <div class="form-group">
-                                        <label class="control-label sr-only " for="Phone"></label>
-                                        <input id="phone" type="text" placeholder="Phone" class="form-control" required>
-                                    </div>
-                                </div>
-                                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                    <div class="form-group">
-                                        <label class="control-label required sr-only" for="select"></label>
-                                        <select class="form-control">
-                                            <option value="">Qual o tipo do seu problema?</option>
-                                            <option value="">Eletrico</option>
-                                            <option value="">Eletronico</option>
-                                            <option value="">Mecanico</option>
-                                            <option value="">Pneumatico</option>
-                                            <option value="">Operacional</option>
-                                            <option value="">Software</option>
-                                        </select>
-                                    </div>
-                                </div>
-                                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mb20">
-                                    <div class="form-group">
-                                        <label class="control-label sr-only" for="textarea"></label>
-                                        <textarea class="form-control pdt20" id="textarea" name="textarea" rows="4" placeholder="Message"></textarea>
-                                    </div>
-                                </div>
-                                <div class="col-lg-12 col-md-12 col-sm-6 col-xs-12">
-                                    <button class="btn btn-primary btn-lg ">Enviar</button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
+          <hr>
+
+
         </div>
+
+        <div class="col-lg-offset-1 col-lg-5 col-md-offset-1 col-md-5 col-sm-12 col-xs-12">
+                  <div class="contact-form">
+                      <h3 class="contact-info-title">Contato</h3>
+                      <div class="row">
+                          <form>
+                              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                                  <div class="form-group">
+                                      <label class="control-label sr-only " for="Name"></label>
+                                      <input id="name" type="text" placeholder="Name" class="form-control" required>
+                                  </div>
+                              </div>
+                              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                                  <div class="form-group">
+                                      <label class="control-label sr-only " for="email"></label>
+                                      <input id="email" type="text" placeholder="Email" class="form-control" required>
+                                  </div>
+                              </div>
+                              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                                  <div class="form-group">
+                                      <label class="control-label sr-only " for="Phone"></label>
+                                      <input id="phone" type="text" placeholder="Phone" class="form-control" required>
+                                  </div>
+                              </div>
+                              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                                  <div class="form-group">
+                                      <label class="control-label required sr-only" for="select"></label>
+                                      <select class="form-control">
+                                          <option value="">Qual o tipo do seu problema?</option>
+                                          <option value="">Eletrico</option>
+                                          <option value="">Eletronico</option>
+                                          <option value="">Mecanico</option>
+                                          <option value="">Pneumatico</option>
+                                          <option value="">Operacional</option>
+                                          <option value="">Software</option>
+                                      </select>
+                                  </div>
+                              </div>
+                              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mb20">
+                                  <div class="form-group">
+                                      <label class="control-label sr-only" for="textarea"></label>
+                                      <textarea class="form-control pdt20" id="textarea" name="textarea" rows="4" placeholder="Message"></textarea>
+                                  </div>
+                              </div>
+                              <div class="col-lg-12 col-md-12 col-sm-6 col-xs-12">
+                                  <button class="btn btn-primary btn-lg ">Enviar</button>
+                              </div>
+                          </form>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+  <div class="space-medium">
+      <div class="container">
+          <div class="row">
+              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mb60">
+                  <hr>
+              </div>
+          </div>
+          <div class="row">
+              <div class="col-lg-5 col-md-5 col-sm-6 col-xs-12">
+                  <div id="contact-map"></div>
+              </div>
+              <div class="col-lg-offset-1 col-lg-5 col-md-offset-1 col-md-5 col-sm-6 col-xs-12">
+                  <div class="">
+                      <h3 class="title-bold">Informações</h3>
+                  </div>
+                  <div class="contact-section">
+                      <div class="contact-icon"><i class="fa fa-map-marker"></i></div>
+                      <div class="contact-info">
+                          <p>Rua João Abdelnur, 99 - São Carlos - SP, Brasil</p>
+                      </div>
+                  </div>
+                   <div class="contact-section">
+                      <div class="contact-icon"><i class="fa fa-phone"></i></div>
+                      <div class="contact-info">
+                          <p>+55 (16)33632600 </p>
+                      </div>
+                  </div>
+                   <div class="contact-section">
+                      <div class="contact-icon"><i class="fa fa-envelope"></i></div>
+                      <div class="contact-info">
+                          <p>hece@hece.com.br</p>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <div class="row">
+                  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12  text-center">
+            Criado por <a href="http://hece.com.br" target="_blank">Hece Maquinas</a>
+            </div></div>
+      </div>
+  </div>
+      </div>
+      <!-- /.row -->
+
     </div>
-    <div class="space-medium">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mb60">
-                    <hr>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-5 col-md-5 col-sm-6 col-xs-12">
-                    <div id="contact-map"></div>
-                </div>
-                <div class="col-lg-offset-1 col-lg-5 col-md-offset-1 col-md-5 col-sm-6 col-xs-12">
-                    <div class="">
-                        <h3 class="title-bold">Informações</h3>
-                    </div>
-                    <div class="contact-section">
-                        <div class="contact-icon"><i class="fa fa-map-marker"></i></div>
-                        <div class="contact-info">
-                            <p>Rua João Abdelnur, 99 - São Carlos - SP, Brasil</p>
-                        </div>
-                    </div>
-                     <div class="contact-section">
-                        <div class="contact-icon"><i class="fa fa-phone"></i></div>
-                        <div class="contact-info">
-                            <p>+55 (16)33632600 </p>
-                        </div>
-                    </div>
-                     <div class="contact-section">
-                        <div class="contact-icon"><i class="fa fa-envelope"></i></div>
-                        <div class="contact-info">
-                            <p>hece@hece.com.br</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12  text-center">
-              Criado por <a href="http://hece.com.br" target="_blank">Hece Maquinas</a>
-              </div></div>
-        </div>
-    </div>
+    <!-- /.container -->
 
+    <!-- Footer -->
+    <footer class="py-4 bg-dark">
+      <div class="container">
+        <p class="m-0 text-center text-white">Copyright &copy; ForumSite v1.00_2018</p>
+      </div>
+      <!-- /.container -->
+    </footer>
 
-     <script>
-    function initMap() {
-        var uluru = {
-            lat: 23.094197,
-            lng: 72.558148
-        };
-        var map = new google.maps.Map(document.getElementById('contact-map'), {
-            zoom: 14,
-            center: uluru,
-            scrollwheel: false
-        });
-        var marker = new google.maps.Marker({
-            position: uluru,
-            map: map,
-            icon: 'https://easetemplate.com/free-website-templates/life-coach/images/map_marker.png'
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-        });
-    }
-    </script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBZib4Lvp0g1L8eskVBFJ0SEbnENB6cJ-g&callback=initMap">
-    </script>
-<script type="text/javascript">
+  </body>
 
-</script>
-</body>
-</html
+</html>
