--- a/home.html
+++ b/home.html
@@ -1,106 +1,171 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="pt-br">
+
+  <head>
+
     <meta charset="utf-8">
-    <!-- This file has been downloaded from Bootsnipp.com. Enjoy! -->
-    <title>Forum Hece</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
-    <style type="css/style.css"> </style>
-    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-</head>
-<body>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-				<div class="container">
-					<!-- left nav top -->
-					<ul class="nav navbar-nav pull-left">
-						<div class="navbar-brand" href="#">Hece Maquinas</div>
-					</ul>
-					<!-- right nav top -->
-					<ul class="nav navbar-nav pull-right" style="padding:9px;">
-						<input type="text" class="" name="username" placeholder="Username">
-						<input type="text" class="" name="password" placeholder="Password">
-						<a href="#" class="btn btn-sm btn-success"><span class="glyphicon glyphicon-user"></span> Sign In</a>
-						<a href="#" class="btn btn-sm btn-primary"><span class="glyphicon glyphicon-certificate"></span> Register</a>
-					</ul>
-				</div>
+    <title>Forum Apoio Tecnico Hece Maquinas</title>
 
-			</nav>
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-			<!-- down nav -->
-			<nav class="navbar navbar-down">
-				<div class="container">
-					<div class="flex-container">
+    <!-- Custom styles for this template -->
+    <link href="css/blog-post.css" rel="stylesheet">
 
-						<ul class="nav navbar-nav flex-item hidden-xs">
-							<li><a href="file:///C:/Users/Dalton/Documents/ForumSite/home.html">Home</a></li>
-							<li><a href="file:///C:/Users/Dalton/Documents/ForumSite/forum.html">Forum</a></li>
-							<li><a href="file:///C:/Users/Dalton/Documents/ForumSite/contact.html">contatos</a></li>
-						</ul>
+  </head>
 
-						<ul class="nav navbar-nav flex-item hidden-xs pull-right">
-							<li><a href="#" class=""></a></li>
-						</ul>
-					</div>
-				</div>
-			</nav>
+  <body>
 
-		</nav>		<!-- /master nav -->
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="#">Hece Maquina</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="file:///C:/Users/Dalton/Documents/prj2018/ForumSite/home.html">Principal
+                <span class="sr-only">(current)</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="file:///C:/Users/Dalton/Documents/prj2018/ForumSite/forum.html">Forum</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="file:///C:/Users/Dalton/Documents/prj2018/ForumSite/usuarios.html">Usuarios</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="file:///C:/Users/Dalton/Documents/prj2018/ForumSite/contact.html">Sobre</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
-        		<div class="container body-content">
-			<div class="row">
+    <!-- Page Content -->
+    <div class="container">
 
-				<!-- left section -->
-				<div class="col-md-8">
-					<div class="page-header">
-  					<h1><i class="fa fa-home"></i> Bem Vindos! </h1>
-					</div>
+      <div class="row">
 
-					<h4 class="plain-text" style="margin-top:24px;">
-                Este forum foi criado para criar uma ligação entre a dúvida ou problema e a solução.
-                Procure ser bem claro e passar todos os detalhes e informações sobre seu problema.
-          </h4>
-				</div>
+        <!-- Post Content Column -->
+        <div class="col-lg-8">
 
-				<!-- right section -->
-				<div class="col-md-4">
-					<!-- Featured panel -->
-					<div class="panel panel-info">
-						<div class="panel-heading">
-							<h4>Categorias</h4>
-						</div>
-						<div class="panel-body">
-                            <div class="single category">
-                                <ul class="list-unstyled">
-                                    <li><a href="" title="">Mecanico <span class="pull-right">11</span></a></li>
-                                    <li><a href="" title="">Eletrico <span class="pull-right">18</span></a></li>
-                                    <li><a href="" title="">Eletronico <span class="pull-right">23</span></a></li>
-                                    <li><a href="" title="">Pneumatico <span class="pull-right">3</span></a></li>
-                                    <li><a href="" title="">Software <span class="pull-right">9</span></a></li>
-                                    <li><a href="" title="">Operacional <span class="pull-right">43</span></a></li>
-                                </ul>
-                            </div>
+          <!-- Title -->
+          <!-- Preview Image -->
+          <img class="img-fluid rounded" src="imagens/logo hece.jpg" alt="">
+
+          <!-- Author -->
+          <p class="lead">
+            by
+            <a href="#">Suporte Tecnico</a>
+          </p>
+
+          <hr>
+
+          <!-- Date/Time -->
+          <p>Postado em 4 abril, 2018 at 12:00 AM</p>
+
+          <hr>
+
+          <hr>
+
+            <!-- Post Content -->
+            <p class="lead">Esse projeto tem como objetivo auxiliar nosso departamento tecnico na solução de duvidas e problemas em maquinas de embalens plasticas.</p>
+
+            <p>O intuito é que todo problema ou duvida acompanhado de sua solução seja postado aqui e compartilhado para que outros com a mesma situação tenha uma ideia para tentar resolver seu problema.</p>
+
+            <p>Contamos co o apoio e a colaboração de todos que ja tiveram ou que tenha alguma duvida use esse canal para criar um elo mais proximo e firme entre a solução e o problema.</p>
+
+          <hr>
 
 
-						</div>
-					</div>
-					<!-- Newsletter panel -->
-					<div class="panel panel-success">
-						<div class="panel-heading">
-							<h4>Novidades</h4>
-						</div>
-						<div class="panel-body">
-							<p>
-                  Sem Novidades
-              </p>
-						</div>
-					</div>
-				</div> 			<!-- /right section -->
-			</div> 			<!-- /row -->
-		</div>		<!-- /container -->
-<script type="text/javascript">
+        </div>
 
-</script>
-</body>
+        <!-- Sidebar Widgets Column -->
+        <div class="col-md-4">
+
+          <!-- Search Widget -->
+          <div class="card my-4">
+            <h5 class="card-header">Pesquise!</h5>
+            <div class="card-body">
+              <div class="input-group">
+                <input type="text" class="form-control" placeholder="Procurar...">
+                <span class="input-group-btn">
+                  <button class="btn btn-secondary" type="button">Ir!</button>
+                </span>
+              </div>
+            </div>
+          </div>
+
+          <!-- Categories Widget -->
+          <div class="card my-4">
+            <h5 class="card-header">Categorias</h5>
+            <div class="card-body">
+              <div class="row">
+                <div class="col-lg-6">
+                  <ul class="list-unstyled mb-0">
+                    <li>
+                      <a href="#">EletroEltronico</a>
+                    </li>
+                    <li>
+                      <a href="#">Mecanico</a>
+                    </li>
+                    <li>
+                      <a href="#">Software</a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="col-lg-6">
+                  <ul class="list-unstyled mb-0">
+                    <li>
+                      <a href="#">Operacional</a>
+                    </li>
+                    <li>
+                      <a href="#">Material</a>
+                    </li>
+                    <li>
+                      <a href="#">Projeto</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Side Widget -->
+          <div class="card my-4">
+            <h5 class="card-header">Novidades</h5>
+            <div class="card-body">
+              Sem Novidades até o Momento!
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+      <!-- /.row -->
+
+    </div>
+    <!-- /.container -->
+
+    <!-- Footer -->
+    <footer class="py-4 bg-dark">
+      <div class="container">
+        <p class="m-0 text-center text-white">Copyright &copy; ForumSite v1.00_2018</p>
+      </div>
+      <!-- /.container -->
+    </footer>
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  </body>
+
 </html>
