--- a/forum.html
+++ b/forum.html
@@ -1,99 +1,208 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="pt-br">
+
+  <head>
+
     <meta charset="utf-8">
-    <!-- This file has been downloaded from Bootsnipp.com. Enjoy! -->
-    <title>Forum</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
-    <style type="css/style3"> </style>
-    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-</head>
-<body>
-  <nav class="navbar navbar-down">
-    <div class="container">
-      <div class="flex-container">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-        <ul class="nav navbar-nav flex-item hidden-xs">
-          <li><a href="file:///C:/Users/Dalton/Documents/ForumSite/home.html">Home</a></li>
-          <li><a href="file:///C:/Users/Dalton/Documents/ForumSite/forum.html">Forum</a></li>
-          <li><a href="file:///C:/Users/Dalton/Documents/ForumSite/contact.html">contatos</a></li>
-        </ul>
+    <title>Forum Apoio Tecnico Hece Maquinas</title>
 
-        <ul class="nav navbar-nav flex-item hidden-xs pull-right">
-          <li><a href="#" class=""></a></li>
-        </ul>
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="css/blog-post.css" rel="stylesheet">
+
+  </head>
+
+  <body>
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="#">Hece Maquina</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="file:///C:/Users/Dalton/Documents/prj2018/ForumSite/home.html">Principal</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="file:///C:/Users/Dalton/Documents/prj2018/ForumSite/forum.html">Forum
+                <span class="sr-only">(current)</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="file:///C:/Users/Dalton/Documents/prj2018/ForumSite/usuarios.html">Usuarios</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="file:///C:/Users/Dalton/Documents/prj2018/ForumSite/contact.html">Sobre</a>
+            </li>
+          </ul>
+        </div>
       </div>
+    </nav>
+
+    <!-- Page Content -->
+    <div class="container">
+
+      <div class="row">
+
+        <!-- Post Content Column -->
+        <div class="col-lg-8">
+
+          <!-- Title -->
+          <!-- Preview Image -->
+          <img class="img-fluid rounded" src="imagens/logo hece.jpg" alt="">
+
+          <!-- Author -->
+          <p class="lead">
+            by
+            <a href="#">Suporte Tecnico</a>
+          </p>
+
+          <hr>
+
+          <!-- Date/Time -->
+          <p>Postado em 4 abril, 2018 at 12:00 AM</p>
+
+          <!-- Comments Form -->
+            <div class="card my-4">
+              <h5 class="card-header">Leave a Comment:</h5>
+              <div class="card-body">
+                <form>
+                  <div class="form-group">
+                    <textarea class="form-control" rows="3"></textarea>
+                  </div>
+                  <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+              </div>
+            </div>
+
+          <!-- Single Comment -->
+        <div class="media mb-4">
+          <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+          <div class="media-body">
+            <h5 class="mt-0">Commenter Name</h5>
+            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+          </div>
+        </div>
+
+        <!-- Comment with nested comments -->
+        <div class="media mb-4">
+          <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+          <div class="media-body">
+            <h5 class="mt-0">Commenter Name</h5>
+            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+
+            <div class="media mt-4">
+              <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+              <div class="media-body">
+                <h5 class="mt-0">Commenter Name</h5>
+                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+              </div>
+            </div>
+
+            <div class="media mt-4">
+              <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+              <div class="media-body">
+                <h5 class="mt-0">Commenter Name</h5>
+                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+          <hr>
+
+
+        </div>
+
+        <!-- Sidebar Widgets Column -->
+        <div class="col-md-4">
+
+          <!-- Search Widget -->
+          <div class="card my-4">
+            <h5 class="card-header">Pesquise!</h5>
+            <div class="card-body">
+              <div class="input-group">
+                <input type="text" class="form-control" placeholder="Procurar...">
+                <span class="input-group-btn">
+                  <button class="btn btn-secondary" type="button">Ir!</button>
+                </span>
+              </div>
+            </div>
+          </div>
+
+          <!-- Categories Widget -->
+          <div class="card my-4">
+            <h5 class="card-header">Categorias</h5>
+            <div class="card-body">
+              <div class="row">
+                <div class="col-lg-6">
+                  <ul class="list-unstyled mb-0">
+                    <li>
+                      <a href="#">EletroEltronico</a>
+                    </li>
+                    <li>
+                      <a href="#">Mecanico</a>
+                    </li>
+                    <li>
+                      <a href="#">Software</a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="col-lg-6">
+                  <ul class="list-unstyled mb-0">
+                    <li>
+                      <a href="#">Operacional</a>
+                    </li>
+                    <li>
+                      <a href="#">Material</a>
+                    </li>
+                    <li>
+                      <a href="#">Projeto</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Side Widget -->
+          <div class="card my-4">
+            <h5 class="card-header">Novidades</h5>
+            <div class="card-body">
+              Sem Novidades até o Momento!
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+      <!-- /.row -->
+
     </div>
-  </nav>
-<div class="container">
-	<div class="row">   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+    <!-- /.container -->
 
-    <table class="table table-striped">
-        <thead>
-          <tr>
-              <th>2015 IRS Forum</th>
-              <th>IRS Forum Dates</th>
-            </tr>
-          </thead>
-          <tbody>
-           <tr>
-            <td>Washington DC<br/><a href="https://aws.passkey.com/g/42238120" target="_blank">Gaylord National Hotel Convention Center</a><br/><i class="fa fa-map-marker"></i> 201 Waterfront Street<br/>National Harbor, MD 20745</td>
-            <td>July 7 - 9, 2015</td>
-          </tr>
-          <tr class="active">
-            <td><strong>NSTP Annual Federal Tax Refresher Course</strong><br/><a href="https://aws.passkey.com/g/42238120" target="_blank">Gaylord National Hotel Convention Center</a><br/><i class="fa fa-map-marker"></i> 201 Waterfront Street<br/>National Harbor, MD 20745</td>
-            <td><strong>AFTR Date & Registration</strong><br/>July 10, 2015<br/><br/><a class="btn btn-hot btn-block " href="/course/2015-Annual-Federal-Tax-Refresher-Course---National-Harbor%2C-MD" target="_blank"><i class="fa fa-hand-o-right"></i> Register Here</a></td>
-          </tr>
-          <!--Denbver-->
-          <tr>
-            <td>Denver , CO <br/><a href="https://aws.passkey.com/g/34249128"target="_blank">Hyatt Regency Denver at Colorado Convention Center</a><br/><i class="fa fa-map-marker"></i> 650 15th Street<br/>Denver, CO 80202</td>
-            <td>July 28 - 30, 2015</td>
-          </tr>
-         <tr class="active">
-            <td><strong>NSTP Annual Federal Tax Refresher Course</strong> <br/><a href="http://embassysuites3.hilton.com/en/hotels/colorado/embassy-suites-denver-downtown-convention-center-DENESES/index.html"target="_blank">Embassy Suites Denver</a><br/><i class="fa fa-map-marker"></i> 1420 Stout St<br/>Denver, CO 80202</td>
-            <td><strong>AFTR Date & Registration</strong><br/>July 31, 2015<br/><br/><a class="btn btn-hot btn-block " href="/course/2015-Annual-Federal-Tax-Refresher-Course---Denver%2C-CO" target="_blank"><i class="fa fa-hand-o-right"></i> Register Here</a></td>
-          </tr>
-          <!--Denver-->
-          <tr>
-            <td>San Diego, CA <br/><a href="https://aws.passkey.com/g/42502120"target="_blank">San Diego Town & Country</a><br/><i class="fa fa-map-marker"></i> 500 Hotel Circle North <br/>San Diego, CA , 92108</td>
-            <td>August 11 - 13, 2015</td>
-          </tr>
-          <tr class="active">
-            <td><strong>NSTP Annual Federal Tax Refresher Course</strong> <br/><a href="https://aws.passkey.com/g/42502120"target="_blank">San Diego Town & Country</a><br/><i class="fa fa-map-marker"></i> 500 Hotel Circle North <br/>San Diego, CA , 92108</td>
-            <td><strong>AFTR Date & Registration</strong><br/>August 14, 2015<br/><br/><a class="btn btn-hot btn-block " href="/course/2015-Annual-Federal-Tax-Refresher-Course---San-Diego%2C-CA" target="_blank"><i class="fa fa-hand-o-right"></i> Register Here</a></td>
-          </tr>
-          <!--washington-->
-          <tr>
-            <td>Atlanta, GA <br/><a href="https://aws.passkey.com/event/13001814/owner/321/home"target="_blank">Atlanta Marriott Marquis</a><br/><i class="fa fa-map-marker"></i> 265 Peachtree Center Avenue <br/>Atlanta, GA , 30303</td>
-            <td>August 25 - 27, 2015</td>
-          </tr>
-          <tr class="active">
-            <td><strong>NSTP Annual Federal Tax Refresher Course</strong><br/><a href="https://aws.passkey.com/event/13001814/owner/321/home"target="_blank">Atlanta Marriott Marquis</a><br/><i class="fa fa-map-marker"></i> 265 Peachtree Center Avenue  <br/>Atlanta, GA , 30303</td>
-            <td><strong>AFTR Date & Registration</strong><br/>August 28, 2015<br/><br/><a class="btn btn-hot btn-block " href="/course/2015-Annual-Federal-Tax-Refresher-Course---Atlanta%2C-GA" target="_blank"><i class="fa fa-hand-o-right"></i> Register Here</a></td>
-          </tr>
-          <!--washington-->
-          <tr>
-            <td>Orlando, FL<br/><a href="https://aws.passkey.com/g/30187120"target="_blank">Hyatt Regency Orlando</a><br/><i class="fa fa-map-marker"></i> 9801 International Drive <br/>Orlando, FL , 32819</td>
-            <td>September 1 - 3, 2015</td>
-          </tr>
-          <tr class="active">
-            <td><strong>NSTP Annual Federal Tax Refresher Course</strong><br/><a href="https://aws.passkey.com/g/30187120"target="_blank">Hyatt Regency Orlando</a><br/><i class="fa fa-map-marker"></i> 9801 International Drive <br/>Orlando, FL , 32819</td>
-            <td><strong>AFTR Date & Registration</strong><br/>September 4, 2015<br/><br/><a class="btn btn-hot btn-block " href="/course/2015-Annual-Federal-Tax-Refresher-Course---Orlando%2C-FL" target="_blank"><i class="fa fa-hand-o-right"></i> Register Here</a></td>
-          </tr>
-          <!--washington-->
-        </tbody>
-      </table>
-     </div>
+    <!-- Footer -->
+    <footer class="py-4 bg-dark">
+      <div class="container">
+        <p class="m-0 text-center text-white">Copyright &copy; ForumSite v1.00_2018</p>
+      </div>
+      <!-- /.container -->
+    </footer>
 
-    </div>
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-   </div>
+  </body>
 
-
-<script type="text/javascript">
-
-</script>
-</body>
 </html>
